<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TelsaApps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="telsa_app">TELSA SUPER APPS</string>
    <string name="mulai_pengalaman">Lebih dekat bersama Sawit</string>
    <string name="get_started">Get Started</string>
    <string name="hai_guest">Hai, guest</string>
    <string name="welcome_to_telsa_super_apps">Welcome to Telsa Super Apps</string>
    <string name="todo">TODO</string>
    <string name="activity">Activity</string>
    <string name="menanam_bibit">Menanam Bibit</string>
    <string name="september_2022">September 2022</string>
    <string name="news">News</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="masukan_email">masukan email</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="username">username</string>
    <string name="masukan_username">masukan username</string>
    <string name="masukkan_password">masukkan password</string>
    <string name="pt_kimia_tirta_utama_menanam_bibit_di_kebun_jaya_abadi">PT Kimia Tirta Utama Menanam Bibit di kebun Jaya Abadi</string>
    <string name="text">text</string>
    <string name="traceability_sawit">Traceability Sawit</string>
    <string name="telusuri_produk_cpo_mu">Telusuri produk CPO mu</string>
    <string name="explore">explore</string>
    <string name="_8">8</string>
    <string name="posts">posts</string>
    <string name="_11">11</string>
    <string name="followers">Followers</string>
    <string name="_21">21</string>
    <string name="following">Following</string>
    <string name="guest">Guest</string>
    <string name="search_user">Search User</string>
    <string name="follower">Follower</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="home">home</string>
    <string name="judul">judul</string>
    <string name="_13_maret_2022">13 Maret 2022</string>
    <string name="deskripsi">deskripsi</string>
    <string name="your_comments">Your comments</string>
    <string name="masukan_kode_cpomu">masukan kode cpomu</string>
    <string name="hasil_tracing_cpo">HASIL TRACING CPO</string>
    <string name="kode_cpo">kode cpo</string>
    <string name="parameter">Parameter</string>
    <string name="kode">Kode</string>
    <string name="keterangan">Keterangan</string>
    <string name="k1k2p1k4k5l1">K1K2P1K4K5L1</string>
    <string name="k1">K1</string>
    <string name="alamat_kebun">Alamat Kebun</string>
    <string name="desa_pongrongo">Desa Pongrongo</string>
    <string name="k2">K2</string>
    <string name="status_sertifikasi">Status Sertifikasi</string>
    <string name="rspo">RSPO</string>
    <string name="p1">P1</string>
    <string name="kualitas_cpo">Kualitas CPO</string>
    <string name="fraksi_4">Fraksi 4</string>
    <string name="k4">K4</string>
    <string name="tanggal_panen">Tanggal Panen</string>
    <string name="k5">K5</string>
    <string name="jenis_bibit">Jenis Bibit</string>
    <string name="pacifera">Pacifera</string>
    <string name="l1">L1</string>
    <string name="logistik">Logistik</string>
    <string name="po_haryanto">PO.Haryanto</string>
    <string name="iot">IoT</string>
    <string name="website">Website</string>
    <string name="telsa_super_apps">Telsa Super Apps</string>
    <string name="mobile">Mobile</string>
</resources>