<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="159dp"
    android:id="@+id/item_activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="25dp"
    android:layout_marginVertical="20dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="4dp"
    android:layout_height="200dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView

            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/activity"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/menanam_bibit"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_rilis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/september_2022"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.cardview.widget.CardView>