<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="20dp"
        android:id="@+id/item_news"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/tv_judul"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/pt_kimia_tirta_utama_menanam_bibit_di_kebun_jaya_abadi"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:layout_marginStart="60dp"
                    android:src="@drawable/news"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/text" />

            </LinearLayout>
            <TextView
                android:id="@+id/tv_rilis"
                android:layout_marginStart="10dp"
                android:text="@string/september_2022"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>

